Added initial html and css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,30 @@
 <body>
     <div class="main">
         <div class="overlay">
-            <div class="title">We are coming oon!</div>
+            <div class="title">We are coming soon!</div>
+            <div class="title" id="end-date">13th of October 2022, 07:16 PM</div>
+            <div class="col">
+                <div>
+                    <input type="text" readonly value="0">
+                    <br />
+                    <label for="">Days</label>
+                </div>
+                <div>
+                    <input type="text" readonly value="0">
+                    <br />
+                    <label for="">Hours</label>
+                </div>
+                <div>
+                    <input type="text" readonly value="0">
+                    <br />
+                    <label for="">Minutes</label>
+                </div>
+                <div>
+                    <input type="text" readonly value="0">
+                    <br />
+                    <label for="">Seconds</label>
+                </div>
+            </div>
         </div>
     </div>
 </body>
