Given an id to the title class

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main">
         <div class="overlay">
             <div class="title">We are coming soon!</div>
-            <div class="title" id="end-date">13th of October 2022, 07:16 PM</div>
+            <div class="title" id="end-date">14 October 2022 01:06 AM</div>
             <div class="col">
                 <div>
                     <input type="text" readonly value="0">
