--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="overlay">
             <div class="title">We are coming soon!</div>
             <div class="title" id="end-date">14 October 2022 01:06 AM</div>
-            <button>Start Now</button>
+            <!-- <button>Start Now</button> -->
             <div class="col">
                 <div>
                     <input type="text" readonly value="0">
